default/sitcon-cfp/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sitcon-cfp
  labels:
    owner: SITCON
    app: sitcon-cfp
    dummy: "1"
spec:
  template:
    metadata:
      labels:
        app: sitcon-cfp
        owner: SITCON
    spec:
      volumes:
        - name: upload-file
          azureDisk:
            diskName: upload.vhd
            diskURI: https://00lh7gva4cu6rswagnt0.blob.core.windows.net/vhds/upload.vhd
      containers:
        - name: sitcon-cfp
          image: tonyhhyip/sitcon-cfp:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /usr/src/app/public/uploads
              name: upload-file
          readinessProbe:
            tcpSocket:
              port: rail
          livenessProbe:
            tcpSocket:
              port: rail
          ports:
            - containerPort: 3000
              name: rail
